--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
-<body>
+<body id="home" class="scrollspy">
   <div class="navbar-fixed">
     <nav class="blue">
       <div class="container">
@@ -74,6 +74,102 @@
       </ul>
     </div>
   </section>
+
+  <section id="search" class="section section-search blue darken-1 white-text center scrollspy">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <h3>Search Destinations</h3>
+          <div class="input-field">
+            <input type="text" class="white grey-text autocomplete" id="autocomplete-input" placeholder=" Paris, London, Amsterdam, etc ...">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="section section-icons grey lighten-4 center">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="card-panel">
+            <i class="material-icons large blue-text">room</i>
+            <h4>Pick Where</h4>
+            <p>Sed tempor tristique tortor, sit amet imperdiet lorem tristique eleifend.
+              Nullam vel ultricies diam, eu eleifend lorem.</p>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card-panel">
+            <i class="material-icons large blue-text">store</i>
+            <h4>Travel Shop</h4>
+            <p>Sed tempor tristique tortor, sit amet imperdiet lorem tristique eleifend.
+              Nullam vel ultricies diam, eu eleifend lorem.</p>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card-panel">
+            <i class="material-icons large blue-text">airplanemode_active</i>
+            <h4>Fly Cheap</h4>
+            <p>Sed tempor tristique tortor, sit amet imperdiet lorem tristique eleifend.
+              Nullam vel ultricies diam, eu eleifend lorem.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="pplaces" class="section section-pplaces scrollspy">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="img/img1.jpg" alt="">
+              <span class="card-title">Paris</span>
+            </div>
+            <div class="card-content">
+              Ut vel purus at augue pretium venenatis nec sagittis tortor.
+              Cras magna erat, interdum non faucibus nec, pulvinar eget sem.
+              Maecenas lobortis in nisl id venenatis. Nulla sagittis ut diam non tempor.
+              Suspendisse tempor neque et metus euismod,
+              eu ultricies diam porta. Integer maximus maximus erat, at tristique nisl suscipit et.
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="img/img2.jpg" alt="">
+              <span class="card-title">London</span>
+            </div>
+            <div class="card-content">
+              Ut vel purus at augue pretium venenatis nec sagittis tortor.
+              Cras magna erat, interdum non faucibus nec, pulvinar eget sem.
+              Maecenas lobortis in nisl id venenatis. Nulla sagittis ut diam non tempor.
+              Suspendisse tempor neque et metus euismod,
+              eu ultricies diam porta. Integer maximus maximus erat, at tristique nisl suscipit et.
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="img/img1.jpg" alt="">
+              <span class="card-title">Amsterdam</span>
+            </div>
+            <div class="card-content">
+              Ut vel purus at augue pretium venenatis nec sagittis tortor.
+              Cras magna erat, interdum non faucibus nec, pulvinar eget sem.
+              Maecenas lobortis in nisl id venenatis. Nulla sagittis ut diam non tempor.
+              Suspendisse tempor neque et metus euismod,
+              eu ultricies diam porta. Integer maximus maximus erat, at tristique nisl suscipit et.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
